--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ python = "^3.12"
 django = "^5.1.6"
 python-decouple = "^3.8"
 django-allauth = "^65.4.1"
+requests = "^2.32.3"
+jwt = "^1.3.1"
 
 
 [build-system]
