--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,10 @@ python-decouple = "^3.8"
 django-allauth = "^65.4.1"
 requests = "^2.32.3"
 jwt = "^1.3.1"
+djangorestframework = "^3.15.2"
+django-cors-headers = "^4.7.0"
+drf-yasg = "^1.21.8"
+django-filter = "^25.1"
 
 
 [build-system]
