--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ djangorestframework = "^3.15.2"
 django-cors-headers = "^4.7.0"
 drf-yasg = "^1.21.8"
 django-filter = "^25.1"
+humanize = "^4.12.1"
 
 
 [build-system]
