✨ feat     : provider 헤더 전환로직 추가

--- a/common_api_server/.env
+++ b/common_api_server/.env
@@ -1,6 +1,17 @@
 
 DEBUG=True
-SECRET_KEY=django-insecure-7k(o@v0%hq6!0rlcwfmz$=b(e%@&oiqp#ioz1vkm$qu(%fjiu$
+SECRET_KEY='django-insecure-7k(o@v0%hq6!0rlcwfmz$=b(e%@&oiqp#ioz1vkm$qu(%fjiu$'
+
+
+DEMAND_API_URL=http://localhost:8000
+DEMAND_API_KEY=a39b547b177181bf9860cf19086681957d5f7bf1
+PROVIDER_API_URL=http://localhost:8001
+PROVIDER_API_KEY=3be8b0384b39ce0a583aea8f74deed545001bc3e
+ADMIN_API_URL=http://localhost:8002
+ADMIN_API_KEY=W0yJUCkFpIGuxznKXimhZeiSPba316HoOSspYgEb
+
+COMMON_API_URL=http://localhost:8003
+COMMON_API_TOKEN=277e8397f0e2e29c1fbfec2a23597c7c3165cff6
 
 
 # 소셜 로그인 설정
