--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ drf-yasg = "^1.21.8"
 django-filter = "^25.1"
 humanize = "^4.12.1"
 faker = "^36.1.1"
+django-extensions = "^3.2.3"
 
 
 [build-system]
