--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ django-filter = "^25.1"
 humanize = "^4.12.1"
 faker = "^36.1.1"
 django-extensions = "^3.2.3"
+drf-spectacular = "^0.28.0"
 
 
 [build-system]
